--- a/index.html
+++ b/index.html
@@ -13,7 +13,29 @@
 
 
   <body>
+<div id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">	
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
 
+			<a href="#" class=navbar-brand>New Zealand</a>	
+		</div>
+		<div class="navbar-collapse collapse">
+		<ul class="nav navbar-nav navbar-right">
+		<li><a href="#header">HOME</a></li>
+		<li><a href="#history">HISTORY</a></li>
+		<li><a href="#attractions">ATTRACTIONS</a></li>
+		<li><a href="#header">EVENTS</a></li>
+		<li><a href="#header">MAP</a></li>
+		<li><a href="#header">BLOG</a></li>
+			
+		</ul>
+	</div>
+</div>
 
 
 
