--- a/index.html
+++ b/index.html
@@ -1,41 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>New Zealand</title>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
+	<title>New Zealand</title>
+
+	<!-- Bootstrap -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/custom.css">
 
 
-  <body>
-<div id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">	
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
+	<body>
+		<div id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">	
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 
-			<a href="#" class=navbar-brand>New Zealand</a>	
+					<a href="#" class=navbar-brand>New Zealand</a>	
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#header">HOME</a></li>
+						<li><a href="#history">HISTORY</a></li>
+						<li><a href="#attractions">ATTRACTIONS</a></li>
+						<li><a href="#header">EVENTS</a></li>
+						<li><a href="#header">MAP</a></li>
+						<li><a href="#header">BLOG</a></li>
+
+					</ul>
+				</div>
+			</div>
 		</div>
-		<div class="navbar-collapse collapse">
-		<ul class="nav navbar-nav navbar-right">
-		<li><a href="#header">HOME</a></li>
-		<li><a href="#history">HISTORY</a></li>
-		<li><a href="#attractions">ATTRACTIONS</a></li>
-		<li><a href="#header">EVENTS</a></li>
-		<li><a href="#header">MAP</a></li>
-		<li><a href="#header">BLOG</a></li>
-			
-		</ul>
-	</div>
-</div>
+
+		<!--- End of Navigation -->
+
+		<!---  Header -->
+
+		<div id="header" class="header">
+			<div class="container">
+				<div class="col-lg-6 col-md-6">
+					<h1>Kia Ora</h1>
+					<h2>Welcome to New Zealand</h2>
+					<p>Lorem ipsum dolor sit amet, audire molestie eos cu. An utinam ancillae mandamus eam, ne usu tempor noluisse splendide. Qui ad graece dictas ornatus, ancillae mediocritatem eum id, nam nostro doctus deserunt id. Ut quidam cetero constituam usu, ne has veri movet legendos. Mei probo modus et, vel aeterno eligendi maiestatis cu.</p>
+					<button class="btn btn-lg btn-success">View our Blog</button>
+				</div>
+				<div class="col-lg-6 col-md-6">
+					<img src="images/nzmapboth.png">
+
+
+				</div>
 
 
 
@@ -48,9 +67,10 @@
 
 
 
-   
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+
+
+				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+				<script src="js/bootstrap.min.js"></script>
+			</body>
+			</html>
